# Pyzza

./: .gitignore  LICENSE  README.md  build_android.sh  install.sh  mypy.ini  pyproject.toml  pysidedeploy.spec  pyzza.desktop
scripts/: build_desktop.sh  install.sh  post-install.deb.sh
src/pyzza/flet_app/: README.md  icons.py  main.py
src/pyzza/misc/: converter.py
src/pyzza/models/: recipe.py
src/pyzza/networking/: sync_server.py
src/pyzza/pyside_app/: icons.qrc  main.py  settings.py
src/pyzza/pyside_app/gui/: about.py  delegates.py  festive_overlay.py  filters.py  icons.py  ingredients_list_entry_dialog.py  list_controls.py  main_window.py  misc.py  recipe.py  sync.py
src/pyzza/pyside_app/models/: recipes.py
